// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderServerResponseBody allows for strings to be returned from renderApplication 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Document
    </title>
  </head>
  <body>
    <div id="single-spa-application:header">
      <button>
        App header
      </button>
    </div>
    <div class="main-content">
      <button>
        Top level content
      </button>
      <div id="single-spa-application:app1">
        <button>
          App app1
        </button>
      </div>
      Some raw text
    </div>
    <span>
      <footer>
        <a href="/about">
          About
        </a>
      </footer>
    </span>
    <single-spa-router mode="history"
                       base="/"
    >
      <div id="single-spa-application:undefined">
        <button>
          App undefined
        </button>
      </div>
      <div class="main-content">
        <button>
          Top level content
        </button>
        <div id="single-spa-application:undefined">
          <button>
            App undefined
          </button>
        </div>
        Some raw text
      </div>
      <span>
        <footer>
          <a href="/about">
            About
          </a>
        </footer>
      </span>
    </single-spa-router>
  </body>
</html>
`;

exports[`renderServerResponseBody dom-elements.html fixture renders the app1 route correctly 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Document
    </title>
  </head>
  <body>
    <div id="single-spa-application:header">
      <button>
        App header
      </button>
    </div>
    <div class="main-content">
      <button>
        Top level content
      </button>
      <div id="single-spa-application:app1">
        <button>
          App app1
        </button>
      </div>
      Some raw text
    </div>
    <span>
      <footer>
        <a href="/about">
          About
        </a>
      </footer>
    </span>
    <single-spa-router mode="history"
                       base="/"
    >
      <div id="single-spa-application:undefined">
        <button>
          App undefined
        </button>
      </div>
      <div class="main-content">
        <button>
          Top level content
        </button>
        <div id="single-spa-application:undefined">
          <button>
            App undefined
          </button>
        </div>
        Some raw text
      </div>
      <span>
        <footer>
          <a href="/about">
            About
          </a>
        </footer>
      </span>
    </single-spa-router>
  </body>
</html>
`;

exports[`renderServerResponseBody fragments.html fixture renders fragments correctly 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Document
    </title>
  </head>
  <body>
    <single-spa-router mode="history"
                       base="/"
    >
    </single-spa-router>
    <script type="systemjs-importmap">
      {
                    "imports": {}
                  }
    </script>
  </body>
</html>
`;

exports[`renderServerResponseBody multiple-fragments.html fixture allows renderFragment to return a string 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8">
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Document
    </title>
  </head>
  <body>
    <single-spa-router mode="history"
                       base="/"
    >
    </single-spa-router>
    <script type="systemjs-importmap">
      {
                "imports": {}
              }
    </script>
  </body>
</html>
`;

exports[`renderServerResponseBody multiple-fragments.html fixture preserves correct order of bytes when both fragments are slow 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>
      Document
    </title>
    <script type="systemjs-importmap">
      {
                    "imports": {}
                  }
    </script>
  </head>
  <body>
    <single-spa-router mode="history"
                       base="/"
    >
    </single-spa-router>
  </body>
</html>
`;

exports[`renderServerResponseBody multiple-fragments.html fixture preserves correct order of bytes when fragments are synchronous 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>
      Document
    </title>
    <script type="systemjs-importmap">
      {
                  "imports": {}
                }
    </script>
  </head>
  <body>
    <single-spa-router mode="history"
                       base="/"
    >
    </single-spa-router>
  </body>
</html>
`;

exports[`renderServerResponseBody multiple-fragments.html fixture preserves correct order of bytes when head-metadata is slow 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>
      Document
    </title>
    <script type="systemjs-importmap">
      {
                  "imports": {}
                }
    </script>
  </head>
  <body>
    <single-spa-router mode="history"
                       base="/"
    >
    </single-spa-router>
  </body>
</html>
`;

exports[`renderServerResponseBody multiple-fragments.html fixture preserves correct order of bytes when import map is slow 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>
      Document
    </title>
    <script type="systemjs-importmap">
      {
                    "imports": {}
                  }
    </script>
  </head>
  <body>
    <single-spa-router mode="history"
                       base="/"
    >
    </single-spa-router>
  </body>
</html>
`;
